# marc21_rdf

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: pipeline.yml  pre-commit.yml
marc21_rdf/: __init__.py  types.py  vivo.py
marc21_rdf/interfaces/: __init__.py  _publication_interface.py
marc21_rdf/templates/: article_template.rdf  book_template.rdf  journal_template.rdf  vivo_template.rdf
marc21_rdf/types/: authors.py  editors.py  publishers.py
marc21_rdf/types/publications/: __init__.py  _article.py  _book.py  _jornal.py
marc21_rdf/utils/: __init__.py  _get_module_classes.py
tests/: conftest.py  rdf_test.py  vivo_rdf_test.py
tests/utils/: get_module_test.py
